--- a/CSS/base.css
+++ b/CSS/base.css
@@ -164,7 +164,7 @@ header {
     position: relative;
     width: 100%;
     height: 100%;
-    background-image: url('IMG/bg.jpg'); /* Reemplaza con la ruta real de tu imagen de fondo */
+    background-image: url('bg.jpg'); /* Reemplaza con la ruta real de tu imagen de fondo */
     background-size: cover;
     background-position: center;
 
